// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row /> renders as compact 1`] = `
<div
  className="row-0-2-1 row_compact-0-2-2 inline-0-0-2-19"
>
  <div
    className="primary-0-2-11"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders as spacious 1`] = `
<div
  className="row-0-2-1 row_spacious-0-2-3 inline-0-0-2-20"
>
  <div
    className="primary-0-2-11"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders in middle 1`] = `
<div
  className="row-0-2-1 row_middleAlign-0-2-4 inline-0-0-2-21"
>
  <div
    className="primary-0-2-11"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders with a baseline 1`] = `
<div
  className="row-0-2-1 row_baseline-0-2-5 inline-0-0-2-17"
>
  <div
    className="primary-0-2-11"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders with a topline 1`] = `
<div
  className="row-0-2-1 row_topline-0-2-6 inline-0-0-2-18"
>
  <div
    className="primary-0-2-11"
  >
    PRIMARY
  </div>
</div>
`;
